Fix blue default color on safari

--- a/client/styles/components/button.css
+++ b/client/styles/components/button.css
@@ -1,11 +1,13 @@
 button {
   font-size: 16px;
+  color: #000000;
 }
 
 .button {
   padding: 16px;
   border-radius: 16px;
   border: none;
+  color: #000000;
 }
 
 .button:hover {
