--- a/client/styles/components/input.css
+++ b/client/styles/components/input.css
@@ -1,10 +1,12 @@
 input {
   font-size: 16px;
+  color: #000000;
 }
 
 .input {
   padding: 16px;
   border-radius: 16px;
   border: none;
+  color: #000000;
   background-color: #f1f1f1;
 }
